--- a/RunescapeCacheTools/RunescapeCacheTools.csproj
+++ b/RunescapeCacheTools/RunescapeCacheTools.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{A2C77AE9-5E36-4BDE-B6DE-EA5ADA87DAD2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RunescapeCacheTools</RootNamespace>
-    <AssemblyName>RunescapeCacheTools</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>RuneScapeCacheTools</RootNamespace>
+    <AssemblyName>RuneScapeCacheTools</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
