--- a/RunescapeCacheToolsGUI/RunescapeCacheToolsGUI.csproj
+++ b/RunescapeCacheToolsGUI/RunescapeCacheToolsGUI.csproj
@@ -7,13 +7,14 @@
     <ProjectGuid>{D0C222F1-8E7B-4A84-870C-39A65D2B522B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RunescapeCacheToolsGUI</RootNamespace>
-    <AssemblyName>RunescapeCacheToolsGUI</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>RuneScapeCacheToolsGUI</RootNamespace>
+    <AssemblyName>RuneScapeCacheToolsGUI</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -103,9 +104,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RunescapeCacheTools\RunescapeCacheTools.csproj">
+    <ProjectReference Include="..\RunescapeCacheTools\RuneScapeCacheTools.csproj">
       <Project>{a2c77ae9-5e36-4bde-b6de-ea5ada87dad2}</Project>
-      <Name>RunescapeCacheTools</Name>
+      <Name>RuneScapeCacheTools</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
