Base class for jobs

--- a/RuneScapeCacheToolsGUI/RuneScapeCacheToolsGUI.csproj
+++ b/RuneScapeCacheToolsGUI/RuneScapeCacheToolsGUI.csproj
@@ -60,7 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="ExtractJobUserControl.xaml">
+    <Page Include="CacheJobUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -72,8 +72,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ExtractJobUserControl.xaml.cs">
-      <DependentUpon>ExtractJobUserControl.xaml</DependentUpon>
+    <Compile Include="CacheJobUserControl.xaml.cs">
+      <DependentUpon>CacheJobUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
