--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CacheExtractJob.cs" />
     <Compile Include="DirectoryHelper.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="CacheJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Soundtrack.cs" />
     <Compile Include="StreamExtension.cs" />
