--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -46,11 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache.cs" />
+    <Compile Include="LegacyCache.cs" />
     <Compile Include="CacheExtractJob.cs" />
     <Compile Include="DirectoryHelper.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="CacheJob.cs" />
+    <Compile Include="ICache.cs" />
+    <Compile Include="NXTCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Soundtrack.cs" />
     <Compile Include="SoundtrackCombineJob.cs" />
