--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -74,11 +74,9 @@
     <Compile Include="Cache.cs" />
     <Compile Include="NXTCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StreamExtension.cs" />
+    <Compile Include="BinaryReaderExtension.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Villermen\RuneScapeCacheTools\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
