--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -69,7 +69,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtendableDataProcessor.cs" />
+    <Compile Include="FileProcessors\EnumMetadata.cs" />
+    <Compile Include="FileProcessors\EnumValueType.cs" />
     <Compile Include="FileProcessors\EnumFileProcessor.cs" />
+    <Compile Include="FileProcessors\EnumParseException.cs" />
+    <Compile Include="FileProcessors\UnregisteredEnumValueTypeException.cs" />
     <Compile Include="IDataProcessor.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="NXTCache.cs" />
