--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -70,7 +70,7 @@
   <ItemGroup>
     <Compile Include="ExtendableDataProcessor.cs" />
     <Compile Include="FileProcessors\EnumMetadata.cs" />
-    <Compile Include="FileProcessors\EnumValueType.cs" />
+    <Compile Include="FileProcessors\EnumType.cs" />
     <Compile Include="FileProcessors\EnumFileProcessor.cs" />
     <Compile Include="FileProcessors\EnumParseException.cs" />
     <Compile Include="FileProcessors\UnregisteredEnumValueTypeException.cs" />
