--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -69,11 +69,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtendableDataProcessor.cs" />
-    <Compile Include="FileProcessors\EnumMetadata.cs" />
-    <Compile Include="FileProcessors\EnumType.cs" />
-    <Compile Include="FileProcessors\EnumFileProcessor.cs" />
-    <Compile Include="FileProcessors\EnumParseException.cs" />
-    <Compile Include="FileProcessors\UnregisteredEnumValueTypeException.cs" />
+    <Compile Include="FileProcessors\Enums\EnumMetadata.cs" />
+    <Compile Include="FileProcessors\Enums\EnumType.cs" />
+    <Compile Include="FileProcessors\Enums\EnumFileProcessor.cs" />
+    <Compile Include="FileProcessors\Enums\EnumParseException.cs" />
+    <Compile Include="FileProcessors\Enums\UnregisteredEnumValueTypeException.cs" />
     <Compile Include="IDataProcessor.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="NXTCache.cs" />
