--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -70,6 +70,8 @@
   <ItemGroup>
     <Compile Include="Cache\Archive.cs" />
     <Compile Include="Cache\CacheException.cs" />
+    <Compile Include="Cache\Cache.cs" />
+    <Compile Include="Cache\NXTCache.cs" />
     <Compile Include="ExtendableDataProcessor.cs" />
     <Compile Include="FileProcessors\Enums\EnumValueType.cs" />
     <Compile Include="FileProcessors\Enums\EnumMetadata.cs" />
@@ -81,8 +83,6 @@
     <Compile Include="FileProcessors\Enums\EnumMetadataType.cs" />
     <Compile Include="FileProcessors\Enums\UnregisteredEnumTypeException.cs" />
     <Compile Include="IDataProcessor.cs" />
-    <Compile Include="CacheMehRename.cs" />
-    <Compile Include="NXTCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BinaryStreamExtensions.cs" />
     <Compile Include="Cache\ReferenceTable.cs" />
