--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -68,10 +68,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\Archive.cs" />
+    <Compile Include="Cache\RuneTek5\Archive.cs" />
     <Compile Include="Cache\CacheException.cs" />
     <Compile Include="Cache\Cache.cs" />
-    <Compile Include="Cache\NXTCache.cs" />
+    <Compile Include="Cache\RuneTek7Cache.cs" />
     <Compile Include="ExtendableDataProcessor.cs" />
     <Compile Include="FileProcessors\Enums\EnumValueType.cs" />
     <Compile Include="FileProcessors\Enums\EnumMetadata.cs" />
@@ -83,11 +83,14 @@
     <Compile Include="FileProcessors\Enums\EnumMetadataType.cs" />
     <Compile Include="FileProcessors\Enums\UnregisteredEnumTypeException.cs" />
     <Compile Include="IDataProcessor.cs" />
+    <Compile Include="Cache\RuneTek5Cache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BinaryStreamExtensions.cs" />
-    <Compile Include="Cache\ReferenceTable.cs" />
+    <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Cache\RuneTek7\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
