--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Cache\RuneTek5\Archive.cs" />
     <Compile Include="Cache\CacheException.cs" />
     <Compile Include="Cache\Cache.cs" />
+    <Compile Include="Cache\RuneTek5\Cache.cs" />
+    <Compile Include="Cache\RuneTek5\ChecksumTable.cs" />
+    <Compile Include="Cache\RuneTek5\Container.cs" />
     <Compile Include="Cache\RuneTek5\FileStore.cs" />
     <Compile Include="Cache\RuneTek5\Index.cs" />
     <Compile Include="Cache\RuneTek5\Sector.cs" />
