--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Cache\Cache.cs" />
     <Compile Include="Cache\RuneTek5\Audio\JagaParseException.cs" />
     <Compile Include="Cache\RuneTek5\Audio\AudioChunkDescriptor.cs" />
-    <Compile Include="Cache\RuneTek5\Cache.cs" />
+    <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
     <Compile Include="Cache\RuneTek5\ChecksumTable.cs" />
     <Compile Include="Cache\RuneTek5\Container.cs" />
     <Compile Include="Cache\RuneTek5\Enums\EnumFile.cs" />
@@ -88,17 +88,11 @@
     <Compile Include="Cache\RuneTek5\Audio\JagaFile.cs" />
     <Compile Include="Cache\RuneTek5\Sector.cs" />
     <Compile Include="Cache\RuneTek7Cache.cs" />
-    <Compile Include="ExtendableDataProcessor.cs" />
-    <Compile Include="FileProcessors\Enums\EnumValueType.cs" />
-    <Compile Include="FileProcessors\Enums\EnumMetadata.cs" />
+    <Compile Include="ExtendableExtensionGuesser.cs" />
     <Compile Include="Cache\RuneTek5\Enums\EnumOpcode.cs" />
     <Compile Include="Cache\RuneTek5\Enums\BaseVarType.cs" />
     <Compile Include="Cache\RuneTek5\Enums\ScriptVarType.cs" />
-    <Compile Include="FileProcessors\Enums\EnumKeyType.cs" />
-    <Compile Include="FileProcessors\Enums\EnumFileProcessor.cs" />
-    <Compile Include="FileProcessors\Enums\EnumMetadataType.cs" />
-    <Compile Include="FileProcessors\Enums\UnregisteredEnumTypeException.cs" />
-    <Compile Include="IDataProcessor.cs" />
+    <Compile Include="IExtensionGuesser.cs" />
     <Compile Include="Cache\RuneTek5Cache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BinaryStreamExtensions.cs" />
