--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -87,13 +87,13 @@
     <Compile Include="Cache\RuneTek5\Index.cs" />
     <Compile Include="Cache\RuneTek5\Audio\JagaFile.cs" />
     <Compile Include="Cache\RuneTek5\Sector.cs" />
-    <Compile Include="ExtendableExtensionGuesser.cs" />
+    <Compile Include="Cache\ExtendableExtensionGuesser.cs" />
     <Compile Include="Cache\RuneTek5\Enums\EnumOpcode.cs" />
     <Compile Include="Cache\RuneTek5\Enums\BaseVarType.cs" />
     <Compile Include="Cache\RuneTek5\Enums\ScriptVarType.cs" />
-    <Compile Include="IExtensionGuesser.cs" />
+    <Compile Include="Cache\IExtensionGuesser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BinaryStreamExtensions.cs" />
+    <Compile Include="Cache\BinaryStreamExtensions.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
   </ItemGroup>
   <ItemGroup>
