Add enum data to ScriptVarType Phew, that's over.

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Cache\RuneTek5\Enums\BaseVarType.cs" />
     <Compile Include="Cache\RuneTek5\Enums\ScriptVarType.cs" />
     <Compile Include="Cache\IExtensionGuesser.cs" />
+    <Compile Include="Cache\Vector3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cache\BinaryStreamExtensions.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
