--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Cache\RuneTek5\Archive.cs" />
     <Compile Include="Cache\CacheException.cs" />
     <Compile Include="Cache\CacheBase.cs" />
+    <Compile Include="Cache\RuneTek5\Audio\SoundtrackException.cs" />
     <Compile Include="Cache\RuneTek5\Audio\JagaParseException.cs" />
     <Compile Include="Cache\RuneTek5\Audio\AudioChunkDescriptor.cs" />
     <Compile Include="Cache\RuneTek5\Audio\Soundtrack.cs" />
