Make FileStore thread-safe Enables running the soundtrack extraction and combining in parallel, which is also included in this commit. Move oggCat to application's root directory (for easier calls to generic OS libraries).
It's been running for 10 minutes now without error, so I think I can commit it safely now.

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -107,10 +107,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lib\bgd.dll">
+    <Content Include="bgd.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="lib\oggCat.exe">
+    <Content Include="oggCat.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SQLite.Interop.dll">
