--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -3,6 +3,7 @@
 <packages>
 	<package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
 	<package id="EntityFramework" version="6.0.0" targetFramework="net46" />
+	<package id="log4net" version="2.0.5" targetFramework="net461" />
 	<package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
 	<package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net46" />
 	<package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net46" />
