--- a/RuneScapeCacheToolsCLI/packages.config
+++ b/RuneScapeCacheToolsCLI/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
+	<package id="EntityFramework" version="6.0.0" targetFramework="net461" />
+	<package id="log4net" version="2.0.5" targetFramework="net461" />
 </packages>
