--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -6,6 +6,7 @@
 		<section name="entityFramework"
 		         type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
 		         requirePermission="false" />
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -23,5 +24,15 @@
 			          type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
 		</providers>
 	</entityFramework>
-
+	<log4net>
+		<root>
+			<level value="INFO" />
+			<appender-ref ref="ConsoleAppender" />
+		</root>
+		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="[%date{HH:mm:ss} %logger{1} %level] %message%newline"/>
+			</layout>
+		</appender>
+	</log4net>
 </configuration>
