Extraction from CLI

--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -31,7 +31,7 @@
 		</root>
 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="[%date{HH:mm:ss} %logger{1} %level] %message%newline"/>
+				<conversionPattern value="[%date{HH:mm:ss} %level %logger{1}] %message%newline"/>
 			</layout>
 		</appender>
 	</log4net>
