--- a/RuneScapeCacheToolsCLI/App.config
+++ b/RuneScapeCacheToolsCLI/App.config
@@ -1,38 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
-	<configSections>
-		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework"
-		         type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-		         requirePermission="false" />
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-	</configSections>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-	</startup>
-	<entityFramework>
-		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-			<parameters>
-				<parameter value="v13.0" />
-			</parameters>
-		</defaultConnectionFactory>
-		<providers>
-			<provider invariantName="System.Data.SqlClient"
-			          type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-			<provider invariantName="System.Data.SQLite.EF6"
-			          type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-		</providers>
-	</entityFramework>
-	<log4net>
-		<root>
-			<level value="INFO" />
-			<appender-ref ref="ConsoleAppender" />
-		</root>
-		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="[%date{HH:mm:ss} %level %logger{1}] %message%newline"/>
-			</layout>
-		</appender>
-	</log4net>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <log4net>
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="[%date{HH:mm:ss} %level %logger{1}] %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
 </configuration>
